chores: refactor query filter
